# clearscale

./: README.md  pyproject.toml
.github/workflows/: test.yml
clearscale/: __init__.py  __main__.py  core.py
clearscale.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
