[project]
name = "clearscale"
version = "0.1.0"
description = "A tiny Python library to compare magnitudes of time and other units in a human-readable way."
authors = [
    { name="Aleksandr Volkov", email="alexandr.volkov@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4"
]

[project.urls]
"Homepage" = "https://github.com/Quixot/clearscale"
"Repository" = "https://github.com/Quixot/clearscale"
"Bug Tracker" = "https://github.com/Quixot/clearscale/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
clearscale = "clearscale.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

